plugins {
	id 'java'
	id 'org.springframework.boot' version '2.7.11'
	id 'io.spring.dependency-management' version '1.1.0'
}

group = 'com.tho'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '11'

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
	mavenLocal()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-rsocket'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	// works on those version
	implementation 'net.openhft:chronicle-queue:5.22.28'
	implementation 'net.openhft:chronicle-map:3.22.9'
//	implementation 'net.openhft:chronicle-bytes:2.24ea9'
	implementation enforcedPlatform('net.openhft:third-party-bom:3.19.4')

	implementation 'com.tho:fluxbridge-common:0.0.1-SNAPSHOT'


	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'io.projectreactor:reactor-test'


}

bootRun {
	jvmArgs = [
			"--illegal-access=permit",
			"--add-opens=java.base/java.lang=ALL-UNNAMED",
			"--add-exports=java.base/jdk.internal.ref=ALL-UNNAMED",
			"--add-exports=java.base/sun.nio.ch=ALL-UNNAMED",
			"--add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED",
			"--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
			"--add-opens=jdk.compiler/com.sun.tools.javac=ALL-UNNAMED",
			"--add-opens=java.base/java.lang=ALL-UNNAMED",
			"--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
			"--add-opens=java.base/java.io=ALL-UNNAMED",
			"--add-opens=java.base/java.util=ALL-UNNAMED",

	]
}

tasks.named('test') {
	useJUnitPlatform()
}
